--- a/css/style.css
+++ b/css/style.css
@@ -232,13 +232,13 @@ i {
     object-fit: cover;
 }
 
-.skills_text {
+.skills__text {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
     margin-left: 5%;
 }
 
-.skills_text:before {
+.skills__text:before {
     content: "";
     display: inline-block;
     min-height: inherit;
@@ -246,7 +246,7 @@ i {
     vertical-align: middle;
 }
 
-.skills_text h3 {
+.skills__text h3 {
     font-family: 'Myriad Pro', serif;
     color: #222222;
     font-size: 1.286rem;
@@ -256,7 +256,7 @@ i {
     text-align: left;
 }
 
-.skills_text li {
+.skills__text li {
     font-family: 'Myriad Pro', serif;
     color: #777777;
     font-weight: 400;
@@ -264,12 +264,12 @@ i {
     text-align: left;
 }
 
-.skills_text li:nth-child(n+2) {
+.skills__text li:nth-child(n+2) {
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
-.skills_text ul {
+.skills__text ul {
     padding: 0;
     margin: 0;
     list-style-type: none;
@@ -277,21 +277,21 @@ i {
 }
 
 
-.skills_img {
+.skills__img {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     width: 100%;
     object-fit: cover;
 }
 
-.technologies-list_text {
+.technologies-list__text {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
     margin-right: 5%;
     text-align: right;
 }
 
-.technologies-list_text:before {
+.technologies-list__text:before {
     content: "";
     display: inline-block;
     min-height: inherit;
@@ -299,7 +299,7 @@ i {
     vertical-align: middle;
 }
 
-.technologies-list_text h3 {
+.technologies-list__text h3 {
     font-family: 'Myriad Pro', serif;
     color: #222222;
     font-size: 1.286rem;
@@ -308,11 +308,11 @@ i {
     margin: 0;
 }
 
-.technologies-list_text ul {
+.technologies-list__text ul {
     margin-top: 3%;
 }
 
-.technologies-list_text li {
+.technologies-list__text li {
     font-family: 'Myriad Pro', serif;
     color: #777777;
     font-weight: 400;
@@ -320,19 +320,19 @@ i {
     list-style: none;
 }
 
-.technologies-list_text li:nth-child(n+2) {
+.technologies-list__text li:nth-child(n+2) {
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
-.technologies-list_img {
+.technologies-list__img {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
     width: 100%;
     object-fit: cover;
 }
 
-.about_cv {
+.cv {
     margin-top: 40px;
 }
 
@@ -348,14 +348,14 @@ i {
     padding-top: 10px;
 }
 
-.portfolio_flex {
+.portfolio__flex {
     display: flex;
     justify-content: center;
     margin-top: 3%;
     max-height: 80vh;
 }
 
-.portfolio_header {
+.portfolio-title__header {
     font-family: 'Myriad Pro', serif;
     text-transform: uppercase;
     font-size: 2.858rem;
@@ -365,7 +365,7 @@ i {
     text-align: center;
 }
 
-.portfolio_header-text {
+.portfolio-title__header-text {
     font-family: 'Myriad Pro', serif;
     color: #777777;
     font-size: 1.286rem;
@@ -374,7 +374,7 @@ i {
     margin: 8px 0 0;
 }
 
-.portfolio_gallery {
+.portfolio__gallery {
     width: 90%;
     position: relative;
     overflow: hidden;
@@ -382,7 +382,7 @@ i {
     /*max-height: 80vh;*/
 }
 
-.portfolio_gallery_spanTop {
+.portfolio__gallery__spanTop {
     position: absolute;
     top: 0;
     background-color: rgba(0, 0, 0, 0.71);
@@ -405,7 +405,7 @@ i {
     text-align: center;
 }
 
-.portfolio_gallery_spanBottom {
+.portfolio__gallery__spanBottom {
     position: absolute;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.71);
@@ -429,13 +429,13 @@ i {
     align-items: flex-start;
 }
 
-.spanBottom-item {
+.spanBottom__item {
     width: 50%;
     text-align: center;
 }
 
-.portfolio_gallery:hover .portfolio_gallery_spanTop,
-.portfolio_gallery:hover .portfolio_gallery_spanBottom {
+.portfolio__gallery:hover .portfolio__gallery__spanTop,
+.portfolio__gallery:hover .portfolio__gallery__spanBottom {
     opacity: 1;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -444,7 +444,7 @@ i {
     transform: rotate(0deg);
 }
 
-.portfolio_gallery_spanTop-header {
+.portfolio__gallery__spanTop-header {
     font-family: 'Myriad Pro', serif;
     font-weight: 400;
     letter-spacing: -0.071rem;
@@ -453,7 +453,7 @@ i {
     color: white;
 }
 
-.portfolio_gallery_spanTop-text {
+.portfolio__gallery__spanTop-text {
     font-family: 'Myriad Pro', serif;
     font-size: 1.286rem;
     font-style: italic;
@@ -461,8 +461,8 @@ i {
     color: white;
 }
 
-.portfolio_gallery_spanBottom-gitHub,
-.portfolio_gallery_spanBottom-currentSite {
+.portfolio__gallery__spanBottom-gitHub,
+.portfolio__gallery__spanBottom-currentSite {
     font-family: 'Myriad Pro', serif;
     font-size: 1.286rem;
     font-style: italic;
@@ -471,8 +471,8 @@ i {
     margin: 3px 0;
 }
 
-.portfolio_gallery_spanBottom-gitHub:hover,
-.portfolio_gallery_spanBottom-currentSite:hover {
+.portfolio__gallery__spanBottom-gitHub:hover,
+.portfolio__gallery__spanBottom-currentSite:hover {
     font-weight: bold;
 }
 
@@ -482,32 +482,32 @@ i {
     margin-right: 5px;
 }
 
-.portfolio_gallery_spanBottom-gitHub:hover .fa-github {
+.portfolio__gallery__spanBottom-gitHub:hover .fa-github {
     font-weight: normal;
 }
 
-.portfolio_gallery img {
+.portfolio__gallery img {
     width: 100%;
 }
 
-.portfolio_ArrowBox {
+.portfolio__ArrowBox {
     width: 5%;
     text-align: center;
 }
 
-.portfolio_ArrowBox:hover {
+.portfolio__ArrowBox:hover {
     cursor: pointer;
 }
 
-.portfolio_ArrowBox:hover .fas {
+.portfolio__ArrowBox:hover .fas {
     font-size: 3rem;
 }
 
-.portfolio_ArrowBox:active .fas {
+.portfolio__ArrowBox:active .fas {
     font-size: 1.75rem;
 }
 
-.portfolio_ArrowBox::before {
+.portfolio__ArrowBox::before {
     content: "";
     display: inline-block;
     min-height: inherit;
@@ -523,11 +523,11 @@ i {
     padding-bottom: 57px;
 }
 
-.feedback-header {
+.feedback-title {
     text-align: center;
 }
 
-.feedback-title {
+.feedback-title__header {
     font-family: 'Myriad Pro', serif;
     text-transform: uppercase;
     font-size: 2.858rem;
@@ -537,7 +537,7 @@ i {
     color: white;
 }
 
-.feedback-text {
+.feedback-title__text {
     font-family: 'Myriad Pro', serif;
     color: #777777;
     font-size: 1.286rem;
@@ -572,11 +572,11 @@ i {
     text-align: center;
 }
 
-.feedback-link {
+.feedback-social__link {
     color: white;
 }
 
-.feedback-link:hover {
+.feedback-social__link:hover {
     font-weight: bold;
 }
 
@@ -593,7 +593,7 @@ i {
     text-decoration: underline;
 }
 
-.feedback-link:active {
+.feedback-social__link:active {
     color: #877f88;
 }
 
@@ -651,7 +651,7 @@ i {
         height: 54px;
     }
 
-    .about_cv {
+    .cv {
         font-size: 10px;
         margin-top: 50px;
     }
@@ -672,7 +672,7 @@ i {
         font-size: 2rem;
     }
 
-    .portfolio_ArrowBox:hover .fas {
+    .portfolio__ArrowBox:hover .fas {
         font-size: 2rem;
     }
 
@@ -710,7 +710,7 @@ i {
         margin: 0;
     }
 
-    .skills_img {
+    .skills__img {
         grid-column: 1 / 2;
         grid-row: 3 / 4;
         width: 158px;
@@ -719,21 +719,21 @@ i {
         margin: 0 auto;
     }
 
-    .skills_text {
+    .skills__text {
         grid-column: 1 / 2;
         grid-row: 4 / 5;
     }
 
-    .skills_text h3 {
+    .skills__text h3 {
         text-align: center;
     }
 
-    .skills_text li {
+    .skills__text li {
         margin: 0;
         text-align: center;
     }
 
-    .technologies-list_img {
+    .technologies-list__img {
         grid-column: 1 / 2;
         grid-row: 5 / 6;
         width: 158px;
@@ -742,16 +742,16 @@ i {
         margin: 0 auto;
     }
 
-    .technologies-list_text {
+    .technologies-list__text {
         grid-column: 1 / 2;
         grid-row: 6 / 7;
     }
 
-    .technologies-list_text h3 {
+    .technologies-list__text h3 {
         text-align: center;
     }
 
-    .technologies-list_text li {
+    .technologies-list__text li {
         margin: 0;
         text-align: center;
     }
@@ -772,20 +772,16 @@ i {
         font-size: 12px;
     }
 
-    .about_cv {
+    .cv {
         font-size: 8px;
         margin-top: 30px;
     }
 
-    .portfolio_gallery_display-none {
-        display: none;
-    }
-
-    .portfolio_gallery_spanBottom {
+    .portfolio__gallery__spanBottom {
         justify-content: space-around;
     }
 
-    .spanBottom-item {
+    .spanBottom__item {
         width: auto;
     }
 
